implementing the messages, company profile and personal profile pages into this new format

--- a/src/app/company-profile/company-profile.component.html
+++ b/src/app/company-profile/company-profile.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="warp">
     <div class="">
         <button mat-raised-button>
             <a routerLink="/messages">BACK
