--- a/src/app/common/common.component.css
+++ b/src/app/common/common.component.css
@@ -15,6 +15,8 @@
 }
 .warp{
     border: #424242 solid 1px;
+    padding: 15px;
+    overflow-y: scroll;
 }
 .bottom-border{
     border-bottom: #424242 solid 1px;
