--- a/src/app/personal-profile/personal-profile.component.html
+++ b/src/app/personal-profile/personal-profile.component.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="warp">
     <div class="">
         <button mat-raised-button>
             <a routerLink="/messages">BACK
