--- a/src/app/personal-profile/personal-profile.component.html
+++ b/src/app/personal-profile/personal-profile.component.html
@@ -1,11 +1,11 @@
 <div class="warp">
-    <div class="">
+    <!-- <div class="">
         <button mat-raised-button>
             <a routerLink="/messages">BACK
             </a>
         </button>
 
-    </div>
+    </div> -->
 
     <div class='personal'>
         <div class='personal-logo' style='margin:20px 30px; background:url("https://ss0.baidu.com/94o3dSag_xI4khGko9WTAnF6hhy/image/h%3D300/sign=71f6f27f2c7f9e2f6f351b082f31e962/500fd9f9d72a6059f550a1832334349b023bbae3.jpg") no-repeat  top'>
