--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,9 +37,9 @@
                                 <div class="mat-icon material-icons" role="img" aria-hidden="true">
                                     <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                         viewBox="0 0 44.7 38" style="enable-background:new 0 0 44.7 38;" xml:space="preserve">
-                                        <rect x="11.3" y="12.7" class="st1" width="5.6" height="5.6" />
-                                        <rect x="19.3" y="12.7" class="st1" width="5.6" height="5.6" />
-                                        <rect x="27.7" y="12.7" class="st1" width="5.6" height="5.6" />
+                                        <rect x="11.3" y="12.7" class="st1-Messages" width="5.6" height="5.6" />
+                                        <rect x="19.3" y="12.7" class="st1-Messages" width="5.6" height="5.6" />
+                                        <rect x="27.7" y="12.7" class="st1-Messages" width="5.6" height="5.6" />
                                         <g>
                                             <defs>
                                                 <rect id="SVGID_3_" y="0" width="44.7" height="38" />
@@ -61,7 +61,33 @@
                         <button mat-button class="warp-left ">
                             <a routerLink="/Op10sell" routerLinkActive="active">
                                 <div class="mat-icon material-icons" role="img" aria-hidden="true">
-                                    <img src="../../assets/images/top_btn_08.png" alt="">
+                                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                                        viewBox="0 0 53.6 33.9" style="enable-background:new 0 0 53.6 33.9;" xml:space="preserve">
+                                        <g>
+                                            <defs>
+                                                <rect id="SVGID_1_SELL" y="0" width="53.6" height="33.9" />
+                                            </defs>
+                                            <clipPath id="SVGID_2_SELL">
+                                                <use xlink:href="#SVGID_1_SELL" style="overflow:visible;" />
+                                            </clipPath>
+                                            <path class="st0SELL" d="M8.2,13.4v16.8c1.7,0.4,2.2-0.1,2.2-1.8c-0.1-4.4,0-8.8,0-13.2C10.4,13.3,10.4,13.3,8.2,13.4 M6.6,30.7V13.4
+                                    		H1.8c-1.2,5.8,0,11.1,2.7,16.1C4.8,30,5.7,30.2,6.6,30.7 M11.7,15.3c0,3.7,0,7.1,0,10.6c0,1.1,0.4,1.5,1.3,1.8
+                                    		c4.3,1.3,8.6,2.7,12.8,4.2c3.7,1.3,7.1,0.7,10.4-1c4.5-2.4,9.1-4.8,13.6-7.2c0.7-0.4,1.3-0.8,1.8-1.3c0.3-0.3,0.5-1,0.4-1.4
+                                    		c-0.1-0.3-0.8-0.5-1.2-0.6c-0.6,0-1.3,0.1-1.9,0.3c-2.9,1-5.9,2-8.8,3c-0.5,0.2-0.9,0.5-1.4,0.7c-1,0.4-2.1,1-3.1,1
+                                    		c-3.4,0.1-6.9,0-10.3,0c-0.4,0-0.8,0.1-1.1-0.1c-0.3-0.1-0.7-0.4-0.6-0.6c0.1-0.3,0.4-0.6,0.6-0.7c0.4-0.1,0.8-0.1,1.3-0.1
+                                    		c3.4,0,6.9,0,10.3,0c1.7,0,2.6-0.7,2.5-2c0-1.3-0.9-1.9-2.6-2c-2.2,0-4.4,0-6.6,0c-0.6,0-1.2-0.1-1.6-0.4
+                                    		C23,15.6,17.6,15,11.7,15.3 M40,22.4c2.9-1,5.7-2,8.4-2.9c0.6-0.2,1.1-0.4,1.7-0.5c1.3-0.2,2.5,0.1,3.2,1.3
+                                    		c0.7,1.3,0.2,2.6-0.9,3.2c-6.5,3.7-12.8,8-20.1,10.1c-1.8,0.5-4,0.3-5.8-0.2c-4.9-1.3-9.7-3-14.5-4.5c-0.6,2.7-0.7,2.8-3.4,2.8
+                                    		c-0.3,0-0.7-0.1-1,0c-2.8,0.6-4.1-0.8-5.1-3.2c-2-4.9-2.9-9.8-1.9-15C0.6,12.4,1,12,2.1,12c2.3,0.1,4.6,0.1,6.9,0
+                                    		c1.5,0,2.5,0.4,2.8,1.9c3.8-0.3,7.5-0.1,11,1.3c1.6,0.7,3.2,1.5,4.6,2.5c1,0.7,1.9,1.1,3.1,1c1.6-0.1,3.2,0,4.8,0
+                                    		C38.3,18.8,39,19.3,40,22.4" />
+                                            <path class="st1" d="M31.1,9.2c0-4.7,3.8-8.4,8.4-8.4c4.7,0,8.4,3.8,8.4,8.4s-3.8,8.4-8.4,8.4C34.9,17.6,31.1,13.9,31.1,9.2z"
+                                            />
+                                            <g class="st2SELL">
+                                                <text transform="matrix(1 0 0 1 36.0693 13.248)" class="st3SELL st4SELL st5SELL">$</text>
+                                            </g>
+                                        </g>
+                                    </svg>
 
                                 </div>
                                 <p>Sell</p>
