--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,9 @@
-
+.router-warp{
+    padding: 15px;
+    height: 640px;
+    overflow-y: scroll;
+    margin: 0 auto;
+}
 .warp-left{
     /* border: rgba(0,0,0,.42) solid 1px; */
     height: 100%;
