--- a/src/app/personal-profile/personal-profile.component.css
+++ b/src/app/personal-profile/personal-profile.component.css
@@ -1,9 +1,9 @@
 .warp{
-    padding: 15px;
+    /* padding: 15px;
     height: 640px;
     overflow-y: scroll;
   
-    margin: 0 auto;
+    margin: 0 auto; */
 }
 .personal-logo{
     display: flex;
