--- a/src/app/op140tickets/op140tickets.component.html
+++ b/src/app/op140tickets/op140tickets.component.html
@@ -1,3 +1,49 @@
-<p>
-  op140tickets works!
-</p>
+<div class="op140">
+  <div class='border'>
+    <mat-toolbar>You have three new outstanding connection requests</mat-toolbar>
+    <mat-list role="list">
+      <div class="item mat-list-item">
+        <div class="mat-list-item-content listitem">
+          <span>Item 1</span>
+          <div class='btn-ACCEPT'>
+            <button mat-raised-button>ACCEPT</button>
+            <button mat-raised-button color="accent">DECLINE</button>
+          </div>
+        </div>
+      </div>
+      <div class="item mat-list-item">
+        <div class="mat-list-item-content listitem">
+          <span>Item 2</span>
+          <div class='btn-ACCEPT'>
+            <button mat-raised-button>ACCEPT</button>
+            <button mat-raised-button color="accent">DECLINE</button>
+          </div>
+        </div>
+      </div>
+    </mat-list>
+  </div>
+  <div class="op140-list">
+    <mat-form-field class="serch-width">
+      <input matInput placeholder="SEARCH" (keyup)="serchChange($event)">
+    </mat-form-field>
+
+    <mat-list role="list">
+      <div class="item mat-list-item">
+        <div class="mat-list-item-content listitem">
+          <span>Item 1</span>
+          <span>Item  1 coke</span>
+          <span>Item  1 Customer</span>
+          
+        </div>
+      </div>
+      <div class="item mat-list-item">
+        <div class="mat-list-item-content listitem">
+          <span>Item 2</span>
+          <span>Item 2 coke</span>
+          <span>Item 2 Customer</span>
+          
+        </div>
+      </div>
+    </mat-list>
+  </div>
+</div>
