--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -152,10 +152,13 @@
                         
                     </mat-grid-tile>
                     <mat-grid-tile [colspan]="2">
-                        <button mat-button class="warp-left">
+                        <a routerLink="/op143share" routerLinkActive="active">
+                            <button mat-button class="warp-left">
                             <mat-icon>trending_up</mat-icon>
                             <p>Share Ticket</p>
-                        </button>
+                            </button>
+                        </a>
+                  
                     </mat-grid-tile>
                     <mat-grid-tile [colspan]="2">
                         <button mat-button class="warp-left last-p">
