--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -149,16 +149,36 @@
                                 <p>Connections</p>
                             </button>
                         </a>
-                        
+
                     </mat-grid-tile>
                     <mat-grid-tile [colspan]="2">
                         <a routerLink="/op143share" routerLinkActive="active">
                             <button mat-button class="warp-left">
-                            <mat-icon>trending_up</mat-icon>
-                            <p>Share Ticket</p>
+                                <div class="mat-icon material-icons" role="img" aria-hidden="true">
+                                    <svg version="1.1" id="Layer_1" x="0px" y="0px"
+                                        viewBox="0 0 48.7 26.9" style="enable-background:new 0 0 48.7 26.9;" xml:space="preserve">
+                                        <g>
+                                            <defs>
+                                                <rect id="SVGID_1_Tick" y="0" width="48.7" height="26.9" />
+                                            </defs>
+                                            <clipPath id="SVGID_2_Tick">
+                                                <use xlink:href="#SVGID_1_Tick" style="overflow:visible;" />
+                                            </clipPath>
+                                            <path class="st0Tick" d="M45.4,13.5c0,1.1,1,2.7,2.3,2.9v9.5H1v-9.5c1.6,0,2.9-1.7,2.9-3c0-1.3-1.3-3-2.9-3V1h46.7v9.5
+                                		C46.4,10.8,45.4,12.3,45.4,13.5" />
+                                            <path class="st1Tick" d="M45.4,13.5c0,1.1,1,2.7,2.3,2.9v9.5H1v-9.5c1.6,0,2.9-1.7,2.9-3c0-1.3-1.3-3-2.9-3V1h46.7v9.5
+                                		C46.4,10.8,45.4,12.3,45.4,13.5z" />
+                                        </g>
+                                    </svg>
+
+                                </div>
+
+
+
+                                <p>Share Ticket</p>
                             </button>
                         </a>
-                  
+
                     </mat-grid-tile>
                     <mat-grid-tile [colspan]="2">
                         <button mat-button class="warp-left last-p">
@@ -174,7 +194,7 @@
                 </mat-grid-list>
                 <div class="router-warp">
                     <router-outlet></router-outlet>
-                    
+
                 </div>
             </div>
 
