--- a/src/app/upload/upload.component.html
+++ b/src/app/upload/upload.component.html
@@ -3,7 +3,7 @@
         <button mat-raised-button color='warn' style="background-color:#cd8d45">
             UPLOAD
         </button>
-        <input type='file' id='inputa' (change)="upload(event)">
+        <input type='file' id='inputa' (change)="upload($event)">
         <p>{{uploadPath}}</p>
     </div>
 </div>
