--- a/src/app/message/message.component.css
+++ b/src/app/message/message.component.css
@@ -40,11 +40,12 @@ flex-grow:2;
 }
 .message-bottom .mat-raised-button.mat-primary{
     min-width:66px;
-    line-height:32px;
-    height:32px;
-    margin-top:1em;
+    line-height:40px;
+    height:40px;
+    /* margin-top:1em; */
     margin-left:5px;
 }
+
 .message-main{
     margin-top:41px;
     padding-top:5px;
@@ -53,32 +54,40 @@ flex-grow:2;
 .message-main .chat-list > div{
     display:flex;
 }
-.message-main .chat-list.left > div img{
+.message-main .chat-list.left > div .avatar{
     flex-shrink:0;
     height:40px;
     width:40px;
     margin:5px 5px 0 0;
     border-radius:50%;
 }
-.message-main .chat-list.right > div img{
+.message-main .chat-list.right > div .avatar{
     flex-shrink:0;
     height:40px;
     width:40px;
     margin:5px 0 0 5px;
     border-radius:50%;
 }
-.message-main .chat-list > div p{
+.message-main .imgs{
+    /* display: inline-block; */
+    max-width:400px;
+    min-width:100px;
+    padding:5px;
+}
+.message-main .chat-list > div .text{
     margin: 8px 0;
     padding: 4px 8px;
     border-radius:10px;
     color:white;
     background: rgb(63, 81, 181);
-    max-width: 85%;
+    /* max-width: 85%;
+    min-width: 25%; */
+    box-sizing: content-box;
 }
 .message-main .chat-list.right > div{
     flex-direction:row-reverse
 }
-.message-main .chat-list.right > div div p{
+.message-main .chat-list.right > div div .text{
     padding: 3px 7px;
     background: white;
     border: 1px solid rgb(63, 81, 181);
@@ -88,4 +97,31 @@ flex-grow:2;
 .message-main .chat-list.right > div div i{
     display: block;
     text-align: right
+}
+
+#updated{
+    display: block;
+    line-height: 36px;
+    height: 36px;
+    /* width: 90px; */
+    position: relative;
+}
+#updated input,#updated button{
+    /* width: 90px; */
+    line-height: 36px;
+    position: absolute;
+    /* z-index: -1; */
+}
+#updated input{
+    position: absolute;
+    top:0;
+    left: 0;
+    z-index: 1000;
+    opacity: 0;
+    height: 36px;
+    width: 100%;
+}
+#updated p{
+    margin: 0;
+    padding-left: 95px;
 }
