--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -15,37 +15,54 @@
     <div class='left chat-list'>
       <!-- RORY added in observable -->
       <div *ngFor="let msg of currentMsgs$|async">
-        <img src='{{ msg.imageSender}}'>
+        <img src='{{ msg.imageSender}}' class="avatar">
         <div>
           <i>{{ msg.nameSender}}</i>
-          <p>
-            {{ msg.message}}
-          </p>
+          <div class="text">
+            <!-- <p>
+              {{ msg.message}}
+            </p> -->
+            <img class='imgs' src='https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1521461916452&di=f6d0e9d8d712dc707550a69d952d3953&imgtype=0&src=http%3A%2F%2Fe.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F3801213fb80e7bec00e429f3232eb9389b506be1.jpg'>
+          </div>
         </div>
       </div>
     </div>
     <div class='right chat-list'>
       <div *ngFor="let msg of mineMessage">
-        <img src='{{ msg.imageSender}}'>
+        <img src='{{ msg.imageSender}}' class="avatar">
         <div>
           <i>{{ msg.nameSender}}</i>
-          <p>
-            {{ msg.message}}
-          </p>
+          <div class="text">
+            <!-- <p>
+               {{ msg.message}}
+            </p> -->
+            <img class='imgs' src='https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1521461916452&di=f6d0e9d8d712dc707550a69d952d3953&imgtype=0&src=http%3A%2F%2Fe.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F3801213fb80e7bec00e429f3232eb9389b506be1.jpg'>
+          </div>
         </div>
       </div>
     </div>
   </div>
 
+  <mat-menu #appMenu="matMenu" xPosition='after' yPosition='above' >
+    <button mat-menu-item id='updated'>
+      FILE
+      <input type='file' id='inputa' (change)="upload($event)">
+    </button>
+    <button mat-menu-item id='updated'>
+      PICTURE
+      <input type='file' id='inputa' (change)="upload($event)">
+    </button>
+  </mat-menu>
+
   <div class="message-bottom">
     <mat-form-field class="input">
       <input [(ngModel)]="sentMessage.message" (keyup)="onKey($event)" matInput placeholder="SEND MESSAGE">
     </mat-form-field>
+    <button mat-mini-fab [matMenuTriggerFor]="appMenu">
+      <mat-icon>add</mat-icon>
+    </button>
     <button (click)="addMessage()" mat-raised-button color="primary">
-      <svg class="icon" width="20px" height="20.00px" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg">
-        <path fill="#ffffff" d="M294.4 908.8 684.8 512 294.4 115.2c-25.6-25.6-25.6-70.4 0-96 25.6-25.6 70.4-25.6 96 0L832 460.8c12.8 12.8 19.2 32 19.2 51.2S844.8 544 832 563.2l-441.6 441.6c-25.6 25.6-70.4 25.6-96 0C262.4 979.2 262.4 934.4 294.4 908.8z"
-        />
-      </svg>
+      <mat-icon>chevron_right</mat-icon>
     </button>
   </div>
 </div>
