--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -51,7 +51,7 @@
             <p>
               {{ msg.message}}
             </p>
-            <a href="#">aaa.word</a>
+            <a href="#">flie.word</a>
           </div>
         </div>
       </div>
