--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -20,9 +20,10 @@
         <div>
           <i>{{ msg.nameSender}}</i>
           <div class="text">
-            <!-- <p>
+            <p>
               {{ msg.message}}
-            </p> -->
+            </p>
+            <a href="#">flie.word</a>
             <img class='imgs' src='https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1521461916452&di=f6d0e9d8d712dc707550a69d952d3953&imgtype=0&src=http%3A%2F%2Fe.hiphotos.baidu.com%2Fimage%2Fpic%2Fitem%2F3801213fb80e7bec00e429f3232eb9389b506be1.jpg'>
           </div>
         </div>
