--- a/src/app/message/message.component.css
+++ b/src/app/message/message.component.css
@@ -91,6 +91,17 @@
     min-width: 25%; */
     box-sizing: content-box;
 }
+.message-main .right a{
+    margin: 5px;
+    display: block;
+    color:rgb(63, 81, 181);
+    text-decoration: rgb(63, 81, 181) underline;
+}
+.message-main .left a{
+    color:white;
+    display: block;
+    text-decoration: white underline;
+}
 .message-main .chat-list.right > div{
     flex-direction:row-reverse
 }
@@ -98,12 +109,6 @@
     margin: 5px;
 }
 
-.message-main .chat-list > div a{
-    margin: 5px;
-    display: block;
-    color:rgb(63, 81, 181);
-    text-decoration: rgb(63, 81, 181) underline;
-}
 .message-main .chat-list.right > div div .text{
     padding: 3px 7px;
     background: white;
