--- a/src/styles.css
+++ b/src/styles.css
@@ -1,69 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
-@import "~@angular/material/prebuilt-themes/indigo-pink.css";
-.Add-chat button{
-    float:right;
-    
+/* window 下 右侧菜单样式 */
+.window .window-left .mat-figure{
+display: block
 }
-.clearfix:before,
-.clearfix:after {
-  display: table;
-  content: " ";
+.nav,.nav:hover{
+    background-color: #555556!important;
+   
 }
-
-.clearfix:after {
-  clear: both;
+.menu .mat-expansion-panel-body{
+    padding: 0 ;
 }
-.serch-width{
-  width:100%;
+.nav .mat-expansion-indicator::after{
+    border-color: #ce8d39!important;
 }
-#chats-list .mat-list-item-content {
-  padding: 0 ;
+/* 新闻 */
+.news .mat-list-item-content{
+    padding: 0!important;
+    color: #ce8d39;
 }
-.step1 .mat-selection-list .mat-list-item{
-  margin-bottom: 5px!important;
-}
-.mat-list .mat-list-item .mat-list-text, .mat-list .mat-list-option .mat-list-text, .mat-nav-list .mat-list-item .mat-list-text, .mat-nav-list .mat-list-option .mat-list-text, .mat-selection-list .mat-list-item .mat-list-text, .mat-selection-list .mat-list-option .mat-list-text{
-  padding:0!important;
-}
-a{
-  text-decoration: none;
-  color:#000;
-}
-a.color{
-  color:white;
-}
-.add-name .mat-expansion-panel-body{
-    padding:4px 16px !important;
-
-}
-
-
-#chats-list .mat-list-item{
-  margin-bottom: 5px;
-  border-bottom: 1px solid rgba(0,0,0,.08);
-}
-#chats-list button > .mat-button-wrapper{
-  display: block;
-  height: 40px;
-}
-#chats-list button a{
-  display: block
-}
-#chats-list button img{
-  width: 40px; 
-  height: 40px;
-  margin-right: 8px;
-  border-radius: 5px;
-  display: block;
-  float:left;
-  margin-top: 4px;
-  margin-bottom:4px;
-  
-}
-#chats-list button{
-  line-height: 48px;
-  width: 100%;
-  text-align: left;
-  font-weight: 400;
-  font-size: 16px;
+.news .mat-list-item-content a{
+    color: white;
+    text-decoration: none;
 }
