--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -1,11 +1,9 @@
 <div class="window">
     <mat-grid-list cols="12" rowHeight={{height}}>
-        <mat-grid-tile [colspan]='2' class="window-left">
-            <menu-component height={{height}}></menu-component>
+        <mat-grid-tile [colspan]='2' class="window-left" style.height="{{height}}">
+            <menu-component height=300></menu-component>
+            <company-news height=200></company-news>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]='10' class="window-right">
-            window component
-            
-        </mat-grid-tile>
+      
     </mat-grid-list>
 </div>
