--- a/src/app/company-news/company-news.component.html
+++ b/src/app/company-news/company-news.component.html
@@ -1,4 +1,4 @@
-<div [style.height]='height' class="menu">
+<div class="menu">
     <div class="news">
         <b>Company News</b>
         <mat-list role="list">
