--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,20 @@ display: block
     color: white;
     text-decoration: none;
 }
+
+
+
+*::-webkit-scrollbar {/*滚动条整体样式*/
+    width: 4px;     /*高宽分别对应横竖滚动条的尺寸*/
+    height: 4px;
+}
+*::-webkit-scrollbar-thumb {/*滚动条里面小方块*/
+    border-radius: 5px;
+    -webkit-box-shadow: inset 0 0 5px#cc8a4d;
+    background:#cc8a4d;
+}
+*::-webkit-scrollbar-track {/*滚动条里面轨道*/
+    -webkit-box-shadow: inset 0 0 5px white;
+    border-radius: 0;
+    background:white;
+}
