--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -4,5 +4,8 @@
             <menu-component></menu-component>
             <company-news></company-news>
         </mat-grid-tile>
+        <mat-grid-tile [colspan]='10' class="window-right" style.height="{{height}}">
+            111
+        </mat-grid-tile>
     </mat-grid-list>
 </div>
