--- a/src/app/message-window/message-window.component.html
+++ b/src/app/message-window/message-window.component.html
@@ -7,7 +7,7 @@
         </mat-grid-tile>
         <mat-grid-tile [colspan]='16' class="message-window-right">
             <div style='width:100%;'>
-                2
+                <message-component></message-component>
             </div>
         </mat-grid-tile>
     </mat-grid-list>
