--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -21,22 +21,25 @@
     text-indent: -120px;
 }
 .messages{
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    overflow: hidden;
 }
 .search{
     display: flex;
     justify-content:space-between;
     padding-top:1.2em;
-    position: absolute;
+    /* flex-grow:2; */
     width: 100%;
-    top: 0;
+    height: 65px;
 }
 .search .center{
      flex-grow:2;
      margin:0 15px;
 }
 .messages-list{
-    padding-top:85px;
+    /* padding-top:85px; */
+    flex-grow:2;
 }
 .messages-list .chat{
     flex-grow:2;
