--- a/src/app/window/window.component.html
+++ b/src/app/window/window.component.html
@@ -6,7 +6,7 @@
         </mat-grid-tile>
         <mat-grid-tile [colspan]='10' class="window-right" style.height="{{height}}">
             <div style="width: 100%;">
-                <message-window-component></message-window-component>
+                <router-outlet></router-outlet>
             </div>
         </mat-grid-tile>
     </mat-grid-list>
