--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -1,9 +1,11 @@
-<div [style.height]='height' class="message-box scroll">
-    <div class="chat-list">
-        <div  *ngFor="let item of list" class="{{item.use}}">
-            <p>
-                 {{item.text}}
-            </p>
+<div [style.height]='height' class="message-box">
+    <div class="chat-list scroll">
+        <div>
+            <div *ngFor="let item of list" class="{{item.use}}">
+                <p>
+                    {{item.text}}
+                </p>
+            </div>
         </div>
         
     </div>
