--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,7 +1,17 @@
 <div class="menu">
-    <!-- <p>
-        logo
-    </p> -->
+    <div class="logo">
+        <img src="https://headpic.lrts.me/chensongwusheng?imageMogr/v2/auto-orient/thumbnail/180x180&e=1524636000&token=OOHK9_MIwdSJxAHYi5os2taDVS13CVvcEa1cZDb9:2UpXh1Et6v-S0_j0eU7X-1iitLs="
+            alt="">
+        <div>
+            <p>Welcome Charlie</p>
+            <div>
+                <a href="#">
+                    <mat-icon class="input">ic_create</mat-icon>
+                    Edt Profile
+                </a>
+            </div>
+        </div>
+    </div>
     <mat-accordion>
         <mat-expansion-panel *ngFor="let item of data">
 
