--- a/src/app/offers-message/offers-message.component.css
+++ b/src/app/offers-message/offers-message.component.css
@@ -63,16 +63,19 @@
 }
 .messages-list .chat-name{
     font-size:18px; 
+    line-height: 68px;
+}
+.messages-list b{
+    display: flex;
+    justify-content: space-between;
 }
 .messages-list .chat-time{
-    display: flex;
-    line-height: 32px;
     color: #ce8d39;
+    font-size: 14px;
 }
-.messages-list .chat-time span:nth-child(1){
+/* .messages-list .chat-time span:nth-child(1){
     flex-grow:2;
      overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
-    width: 90%;
-}
+} */
