--- a/src/app/offers-sent/offers-sent.component.html
+++ b/src/app/offers-sent/offers-sent.component.html
@@ -40,7 +40,7 @@
   </div>
   <div>
     <div class="offer-right">
-      <div>
+      <div class="date-picker">
         <span>ETD</span>
         <mat-form-field class="example-full-width">
           <input matInput [matDatepicker]="picker" placeholder='DD/MM/YYYY'>
