--- a/src/app/window-buy/window-buy.component.html
+++ b/src/app/window-buy/window-buy.component.html
@@ -1,14 +1,14 @@
-<!-- <div class="message-window">
+<div class="message-window">
     <mat-grid-list cols="24" rowHeight={{height}}>
         <mat-grid-tile [colspan]='7' class="message-window-left">
             <div style='width:100%;'>
-                <messages-component></messages-component>
+                <offers-messages-component></offers-messages-component>
             </div>
         </mat-grid-tile>
-        <mat-grid-tile [colspan]='17' class="message-window-right">
+        <mat-grid-tile [colspan]='17' class="window-buy-right">
             <div style='width:100%;'>
-                <message-component></message-component>
+                <offers-sent></offers-sent>
             </div>
         </mat-grid-tile>
     </mat-grid-list>
-</div> -->
+</div>
