--- a/src/app/offers-sent/offers-sent.component.css
+++ b/src/app/offers-sent/offers-sent.component.css
@@ -1,10 +1,12 @@
 .op55{
     display: flex;
-    padding-top: 30px;
-
+    padding:7em 1em 1em 1em;
+    
 }
 .op55 > div{
     width: 50%;
+    padding:0 1em;
+    /* align-items:2; */
 }
 label{
     display: flex;
@@ -69,5 +71,10 @@ label input{
 
 .btn button{
     float:right;
+}
+.date-picker{
+        display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
