--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -3,11 +3,11 @@
         <div>
             <div *ngFor="let item of list" class="{{item.use}}">
                 <p>
-                    {{item.text}}
+                    {{item.text}}{{DetailID}}
                 </p>
             </div>
         </div>
-        
+
     </div>
     <div class="input-chat">
         <mat-form-field class="message-input">
