--- a/src/app/window-buy/window-buy.component.html
+++ b/src/app/window-buy/window-buy.component.html
@@ -2,7 +2,7 @@
     <mat-grid-list cols="24" rowHeight={{height}}>
         <mat-grid-tile [colspan]='7' class="message-window-left">
             <div style='width:100%;'>
-                <offers-messages-component></offers-messages-component>
+                <offer-list-component></offer-list-component>
             </div>
         </mat-grid-tile>
         <mat-grid-tile [colspan]='17' class="window-buy-right">
