--- a/src/app/menu/menu.component.css
+++ b/src/app/menu/menu.component.css
@@ -29,7 +29,7 @@
     color:#5c5c5c;
     background: #ffffff;
 }
-.nav-children button a{
+.nav-children a{
     color:#5c5c5c;
     text-decoration: none;
 }
