--- a/src/app/offers-sent/offers-sent.component.html
+++ b/src/app/offers-sent/offers-sent.component.html
@@ -2,10 +2,10 @@
   <div>
     <div>
       <label for="">sale name
-        <input type="text" name="" id="">
+        <input type="text" name="" id="" value="{{model.id}}">
       </label>
       <label for="">type of sale
-        <input type="text" name="" id="">
+        <input type="text" name="" id="" value="{{model.id}}">
       </label>
       <label class='label' for="">who are you selling to?
         <div>
