--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -1,6 +1,6 @@
 <div class="menu">
     <div class="logo">
-        <img src="http://img2.imgtn.bdimg.com/it/u=3509004173,840437551&fm=27&gp=0.jpg"
+        <img src="https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1523969142524&di=9013b80be418b35f7ec85f3fd2a86d30&imgtype=0&src=http%3A%2F%2Fimgsrc.baidu.com%2Fimage%2Fc0%253Dshijue1%252C0%252C0%252C294%252C40%2Fsign%3D2a3698229d0a304e462fa8b9b9a1cdf3%2F241f95cad1c8a7861e3ea6286d09c93d70cf5084.jpg"
             alt="">
         <div>
             <p>Welcome Charlie</p>
