--- a/src/app/message/message.component.html
+++ b/src/app/message/message.component.html
@@ -3,7 +3,7 @@
         <div>
             <div *ngFor="let item of list" class="{{item.use}}">
                 <p>
-                    {{item.text}}{{DetailID}}
+                    {{item.text}}
                 </p>
             </div>
         </div>
